src/ingress/k8s/namespace-forex-miner.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: forex-miner
  labels:
    name: forex-miner
