src/ingress/k8s/service-forex-miner-sif.yaml
kind: Service
apiVersion: v1
metadata:
  name: forex-miner-sif
  namespace: ingress
spec:
  type: ExternalName
  externalName: forex-miner-sif.forex-miner.svc.cluster.local
  ports:
  - port: 80
